--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -11,9 +11,11 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    permissions:
+      actions: write
+      contents: write
+      security-events: write
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
