--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,52 +8,68 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  prepare:
     runs-on: ubuntu-latest
-    permissions:
-      actions: write
-      contents: write
-      security-events: write
     steps:
     - uses: actions/checkout@v3
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 7.0.x
+    - run: mkdir out
+
+  win:
+    needs: prepare
+    runs-on: windows-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        runtime: [linux-x64, linux-arm64, win-x86]
+    steps:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
       run: | 
-        dotnet publish --configuration Release --no-restore --runtime osx-x64 --self-contained
-        dotnet publish --configuration Release --no-restore --runtime linux-x64 --self-contained
-        dotnet publish --configuration Release --no-restore --runtime win-x64 --self-contained
+        dotnet publish --configuration Release --no-restore --runtime ${{matrix.runtime}} --self-contained
     - uses: vimtor/action-zip@v1.1
       with:
-        files: bin/Release/net7.0/win-x64/publish/
-        dest: linux.zip
+        files: bin/Release/net7.0/${{matrix.runtime}}/publish/
+        dest: out/${{matrix.runtime}}.zip
+
+  linux:
+    needs: prepare
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: true
+      matrix:
+        runtime: [linux-x64, linux-musl-x64, linux-arm, linux-arm64, linux-bionic-arm64]
+    steps:
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: | 
+        dotnet publish --configuration Release --no-restore --runtime ${{matrix.runtime}} --self-contained
     - uses: vimtor/action-zip@v1.1
       with:
-        files: bin/Release/net7.0/linux-x64/publish/
-        dest: windows.zip
-    - uses: vimtor/action-zip@v1.1
-      with:
-        files: bin/Release/net7.0/osx-x64/publish/
-        dest: osx.zip
-                  
+        files: bin/Release/net7.0/${{matrix.runtime}}/publish/
+        dest: out/${{matrix.runtime}}.zip
+        
+  publish:
+    needs: [win, linux]
+    runs-on: ubuntu-latest     
+    permissions:
+      actions: write
+      contents: write
+      security-events: write  
+    steps:
     - uses: actions/upload-artifact@v3
       with:
         name: plugins
-        path: |
-          windows.zip
-          linux.zip
-          osx.zip
+        path: out/*.zip
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
         prerelease: true
         title: "Development Build"
-        files: |
-          windows.zip
-          linux.zip
-          osx.zip
+        files: out/*.zip
