--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,48 +10,37 @@ on:
 jobs:
   prepare:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.x.x
-    - run: mkdir out
-
-  build:
-    needs: prepare
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        runtime: [linux-x64,linux-arm,linux-arm64,linux-bionic-arm64,linux-musl-x64,win-x64,win-x86,win-arm64]
-    steps:
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: | 
-        dotnet publish -c Release -r ${{matrix.runtime}} --self-contained -p:PublishReadyToRun=true
-    - uses: vimtor/action-zip@v1.1
-      with:
-        files: bin/Release/net7.0/${{matrix.runtime}}/publish/
-        dest: out/${{matrix.runtime}}.zip
-
-  publish:
-    needs: build
-    runs-on: ubuntu-latest
     permissions:
       actions: write
       contents: write
       security-events: write  
     steps:
+    - uses: actions/checkout@v3
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 7.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: | 
+        dotnet publish -c Release -r win-x64 --self-contained -p:PublishReadyToRun=true
+        dotnet publish -c Release -r linux-x64 --self-contained -p:PublishReadyToRun=true
+    - name: Zippin'
+      run: |
+        zip win-x64 
     - uses: actions/upload-artifact@v3
       with:
-        name: artifacts
-        path: out/*.zip
+        name: plugins
+        path: |
+          win-x64.zip bin/Release/net7.0/win-x64/publish/*
+          linux-x64.zip bin/Release/net7.0/linux-x64/publish/*
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
         automatic_release_tag: "latest"
         prerelease: true
         title: "Development Build"
-        files: out/*.zip
+        files: |
+          win-x64.zip
+          linux-x64.zip
