--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,11 +32,11 @@ jobs:
         dotnet publish -c Release -r linux-arm64 --self-contained -p:PublishReadyToRun=true
     - name: Zippin'
       run: |
-        zip win-x64 bin/Release/net7.0/win-x64/publish/*
-        zip win-x86 bin/Release/net7.0/win-x64/publish/*
-        zip linux-x64 bin/Release/net7.0/win-x64/publish/*
-        zip linux-arm bin/Release/net7.0/win-x64/publish/*
-        zip linux-arm64 bin/Release/net7.0/win-x64/publish/*
+        zip -9 win-x64 bin/Release/net7.0/win-x64/publish/*
+        zip -9 win-x86 bin/Release/net7.0/win-x86/publish/*
+        zip -9 linux-x64 bin/Release/net7.0/linux-x64/publish/*
+        zip -9 linux-arm bin/Release/net7.0/linux-arm/publish/*
+        zip -9 linux-arm64 bin/Release/net7.0/linux-arm64/publish/*
     - uses: actions/upload-artifact@v3
       with:
         name: plugins
