--- a/api/build.gradle
+++ b/api/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group = 'cz.iqlandia.iqplanetarium.chatreciever'
@@ -14,6 +15,10 @@ dependencies {
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     implementation 'org.json:json:20231013'
+}
+java{
+    withSourcesJar()
+    withJavadocJar()
 }
 
 test {
