--- a/QuestionManager/build.gradle
+++ b/QuestionManager/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '7.1.2'
 }
 
 group = 'space.itoncek'
@@ -10,11 +11,19 @@ repositories {
 }
 
 dependencies {
-    implementation project(':api')
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation project(':api')
     implementation 'org.json:json:20231013'
     implementation 'org.java-websocket:Java-WebSocket:1.5.6'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'space.itoncek.Main'
+        )
+    }
 }
 
 test {
